--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
         <link href="https://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+        <link href="stylesheet/style.css" type="text/css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="text/javascript" src="javascript/tijd.js"></script>        
         <title>Time cycle</title>
     </head>
     <body>
-        <h1>24 hour time cycle</h1>
+        
+        <div class="clock">
+            <h1>24 hour time cycle</h1>
+            <span id='hr'>00</span>
+            <span> : </span>
+            <span id='min'>00</span>
+            <span> : </span>
+            <span id='sec'>00</span>
+        </div>
     </body>
 </html>
