--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <title>Time cycle</title>
     </head>
     <body>
-        
-        <div class="clock">
-            <h1>24 hour time cycle</h1>
-            <span id='hr'>00</span>
-            <span> : </span>
-            <span id='min'>00</span>
-            <span> : </span>
-            <span id='sec'>00</span>
+        <div class=container>
+            <div class="clock">                
+                <span id='hr'>00</span>
+                <span> : </span>
+                <span id='min'>00</span>
+                <span> : </span>
+                <span id='sec'>00</span>
+            </div>
         </div>
     </body>
 </html>
