--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <title>Time cycle</title>
     </head>
     <body>
-        <div class=container>
+        <h1 id="tekst"></h1>
+        <div class=container>            
             <div class="clock">                
-                <span id='hr'>00</span>
+                <span id="hr">00</span>
                 <span> : </span>
-                <span id='min'>00</span>
+                <span id="min">00</span>
                 <span> : </span>
                 <span id='sec'>00</span>
             </div>
