--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
         <link href="https://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="stylesheet/style.css" type="text/css" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script type="text/javascript" src="javascript/tijd.js"></script>        
+        <link href="stylesheet/style.css" type="text/css" rel="stylesheet">       
         <title>Time cycle</title>
     </head>
     <body>
         <h1 id="tekst"></h1>
+        
+        
+        <img src="images/sun.png">
         <div class=container>            
-            <div class="clock">                
-                <span id="hr">00</span>
-                <span> : </span>
-                <span id="min">00</span>
-                <span> : </span>
-                <span id='sec'>00</span>
+            <div id="clock">                
             </div>
         </div>
+
+    <script type="text/javascript" src="javascript/tijd.js"></script>    
     </body>
 </html>
