--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         
         <header>
-            <h1 id="tekst">1</h1>
+            <h1 id="tekst"></h1>
         </header>
                       
         <main>       
