--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         </header>
                       
         <main>       
-            <img src="images/sun.png" id="sun">
+<!--             <img src="images/sun.png" id="sun"> -->
             <div class=container>            
                 <div id="clock">                
                 </div>
             </div>
         </main>     
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-    <script type="text/javascript" src="javascript/tijd.js"></script> 
+<!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <script type="text/javascript" src="javascript/tijd.js"></script>  -->
     </body>
 </html>
