--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
                       
         <main>       
-<!--             <img src="images/sun.png" id="sun"> -->
+            <img src="images/sun.png" id="sun">
             <div class=container>            
                 <div id="clock">                
                 </div>
