--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </main>     
     
-<!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-    <script type="text/javascript" src="javascript/tijd.js"></script>  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <script type="text/javascript" src="javascript/tijd.js"></script> 
     </body>
 </html>
