--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         </main>     
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-    <script type="text/javascript" src="javascript/tijd.js"></script> 
+    <script type="text/javascript" src="javascript/test.js"></script> 
     </body>
 </html>
